Fix toast align center

--- a/components/toast/style/index.less
+++ b/components/toast/style/index.less
@@ -12,6 +12,7 @@
   align-items: center;
   text-align: center;
   z-index: @toastZIndex;
+  left: 0;
   &-text {
     min-width: 1.2rem;
     display: inline-block;
